commented css for readability

--- a/style.css
+++ b/style.css
@@ -61,6 +61,8 @@ body > * > * > * {
 	border: 1px solid #0c7ddf;
 }
 
+/* NAVBAR START */
+
 .navbar {
 	display: inline-flex;
 	justify-content: space-between;
@@ -72,3 +74,5 @@ body > * > * > * {
 	font-size: 1.5rem;
 	margin: 0.5rem;
 }
+
+/* NAVBAR END */
