navbar style progress

--- a/style.css
+++ b/style.css
@@ -75,4 +75,19 @@ body > * > * > * {
 	margin: 0.5rem;
 }
 
+.navbar-links ul {
+	display: inline-flex;
+	align-items: center;
+}
+
+.navbar-links ul li {
+	padding: 0 1rem;
+}
+
+.navbar-links ul li a {
+	color: #d01111;
+	text-decoration: none;
+	font-size: 1.1rem;
+}
+
 /* NAVBAR END */
