--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ body > * > * > * {
 
 .brand-title {
 	font-size: 2.5rem;
-	margin: 0.5rem;
+	margin: 1rem;
 	color: white
 }
 
@@ -81,7 +81,12 @@ body > * > * > * {
 	display: flex;
 	justify-content: space-between;
 	align-items: center;
-	width: 8rem;
+	width: 10rem;
+	margin-right: 1rem;
+}
+
+.navbar-links > * {
+	font-size: 1.5rem;
 }
 
 .navbar-links > a {
