--- a/style.css
+++ b/style.css
@@ -70,7 +70,19 @@ body > * > * > * {
 	background-color: rgb(50, 50, 50);
 }
 
+.brand-title {
+	font-size: 1.5rem;
+	margin: 0.5rem;
+}
 
+.nav-links {
+	display: flex;
+}
 
+.nav-links > * {
+	margin: 0 1rem;
+	color: white;
+	display: block;
+}
 
 /* NAVBAR END */
