block size achieved for nav links

--- a/style.css
+++ b/style.css
@@ -76,8 +76,19 @@ body > * > * > * {
 	color: white;
 }
 
-.navbar-links ul{
+.navbar-links ul {
 	display: flex;
+}
+
+.navbar-links li {
+	list-style: none;
+}
+
+.navbar-links li a {
+	text-decoration: none;
+	color: white;
+	padding: 1rem;
+	display: block;
 }
 
 /* NAVBAR END */
