--- a/style.css
+++ b/style.css
@@ -108,3 +108,23 @@ body > * > * > * > * {
 }
 
 /* TOGGLE BUTTON */
+
+.navbar-toggle {
+	position: absolute;
+	right: 1rem;
+	display: none;
+	flex-direction: column;
+	justify-content: space-between;
+	width: 30px;
+	height: 21px;
+
+	cursor: pointer;
+	color: black;
+	font-size: 2rem;
+}
+
+.navbar-toggle .bar {
+	width: 100%;
+	height: 3px;
+	background-color: rgb(0, 0, 0);
+}
