--- a/style.css
+++ b/style.css
@@ -111,8 +111,9 @@ body > * > * > * > * {
 
 .navbar-toggle {
 	position: absolute;
-	right: 1rem;
-	display: none;
+	top: 1.5rem;
+	right: 1.5rem;
+	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	width: 30px;
@@ -135,6 +136,27 @@ body > * > * > * > * {
 	}
 
 	.navbar-links {
-		display: none;
+		/* display: none; */
+		width: 100%;
 	}
+
+	.navbar {
+		flex-direction: column;
+		align-items: flex-start;
+	}
+
+	.navbar-links ul {
+		flex-direction: column;
+		width: 100%;
+	}
+
+	.navbar-links li {
+		text-align: center;
+	}
+	
+	.navbar-links li a {
+		padding: .5rem
+	}
+
+	.
 }
