--- a/style.css
+++ b/style.css
@@ -113,7 +113,7 @@ body > * > * > * > * {
 	position: absolute;
 	top: 1.5rem;
 	right: 1.5rem;
-	display: flex;
+	display: none;
 	flex-direction: column;
 	justify-content: space-between;
 	width: 30px;
@@ -129,6 +129,8 @@ body > * > * > * > * {
 	height: 3px;
 	background-color: rgb(0, 0, 0);
 }
+
+/* MEDIA QUERIES */
 
 @media (max-width: 500px) {
 	.navbar-toggle {
@@ -158,7 +160,7 @@ body > * > * > * > * {
 		padding: .5rem
 	}
 
-	.navbar-links.active { /* this will make the navbar links visible in mobile view (display: flex) */
+	.navbar-links.active {
 		display: flex;
 	}
 }
