--- a/style.css
+++ b/style.css
@@ -65,6 +65,7 @@ body {
 	justify-content: space-between;
 	align-items: center;
 	background-color: var(--background-color);
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
 }
 
 .brand-title {
