--- a/style.css
+++ b/style.css
@@ -119,6 +119,29 @@ body {
 	background-color: rgb(0, 0, 0);
 }
 
+/* BOOK LIST */
+
+.books-grid {
+	display: grid;
+	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	margin: 20px;
+}
+
+.book-card {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-between;
+	font-size: 20px;
+	gap: var(--spacing-lg);
+	padding: var(--spacing-lg);
+	border-radius: var(--border-radius);
+	background-color: var(--white);
+	box-shadow: var(--shadow);
+	line-height: 1.2;
+}
+
+
+
 /* MEDIA QUERIES */
 
 @media (max-width: 500px) {
