--- a/style.css
+++ b/style.css
@@ -52,24 +52,21 @@ table {
 :root {
 	--background-color: #ccfbf1;
 	--light-green-hover: #a7f3d0;
-	--white: #fffbfb;
-	--grey: #f0eef1;
-	--black: #050505;
-	--red: #ff7070;
-	--light-green: #9fff9c;
-	--light-red: #ff9c9c;
-	--border-radius: 8px;
-	--spacing-xs: 5px;
-	--spacing-sm: 10px;
-	--spacing-md: 15px;
-	--spacing-lg: 20px;
-	--spacing-xl: 40px;
-	--container-width: 1200px;
-	--shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 body {
 	background-color: var(--background-color);
+}
+
+.add-book {
+	position: absolute;
+	bottom: 3.8rem;
+	right: 1rem;
+	font-size: 20px
+}
+
+.add-book > img {
+	width: 60px;
 }
 
 /* NAVBAR */
@@ -139,21 +136,48 @@ body {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
 	margin: 20px;
+	gap: 20px;
 }
 
 .book-card {
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
+	align-items: flex-start;
 	font-size: 20px;
-	gap: var(--spacing-lg);
-	padding: var(--spacing-lg);
-	border-radius: var(--border-radius);
-	background-color: var(--white);
-	box-shadow: var(--shadow);
+	gap: 20px;
+	padding: 20px;
+	border-radius: 6px;
+	background-color: white;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 	line-height: 1.2;
 }
 
+.book-card img {
+	height: 3dvh;
+}
+
+.book-card > * {
+	display: inline-flex;
+	align-items: center;
+}
+
+.book-card-text {
+	margin-left: 20px;
+}
+/* FOOTER */
+
+.footer {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-color: var(--background-color);
+	box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.2);
+	padding: 1rem;
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
 
 
 /* MEDIA QUERIES */
