--- a/style.css
+++ b/style.css
@@ -165,6 +165,13 @@ body {
 .book-card-text {
 	margin-left: 20px;
 }
+
+.book-card-title {
+	font-size: 1.5rem;
+	font-family: 'Bacasime Antique', serif;
+
+}
+
 /* FOOTER */
 
 .footer {
