--- a/style.css
+++ b/style.css
@@ -151,10 +151,17 @@ body {
 	background-color: white;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 	line-height: 1.2;
+
+	transition: transform 0.3s ease-in-out;
+}
+
+.book-card:hover {
+	transform: scale(1.05);
+	box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
 }
 
 .book-card img {
-	height: 3dvh;
+	height: 3vh;
 }
 
 .book-card > * {
