--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ footer, header, hgroup, menu, nav, section {
 }
 body {
 	line-height: 1;
+	position: relative;
 }
 ol, ul {
 	list-style: none;
@@ -70,7 +71,12 @@ body {
 .add-book > img {
 	width: 60px;
 }
-.add-book-container {
+
+body {
+	position: relative;
+  }
+  
+  .add-book-container {
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -78,11 +84,23 @@ body {
 	z-index: 1;
   }
   
-  .add-book-form {
+  .add-book-overlay {
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
 	backdrop-filter: blur(5px);
-	background-color: rgba(255, 255, 255, 0.8);
+	background-color: rgba(0, 0, 0, 0.6);
+	z-index: 0;
+  }
+  
+  .add-book-form {
+	position: relative;
+	z-index: 1;
 	padding: 20px;
 	border-radius: 6px;
+	background-color: #fff;
 	box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
   }
   
@@ -112,7 +130,7 @@ body {
   .add-book-form button:hover {
 	background-color: #0056b3;
   }
-
+  
 /* NAVBAR */
 
 .navbar {
@@ -238,7 +256,7 @@ body {
 }
 
 
-/* MEDIA QUERIES */
+/* MEDIA QUERIES  navbar */
 
 @media (max-width: 500px) {
 	.navbar-toggle {
@@ -272,6 +290,8 @@ body {
 		display: flex;
 	}
 }
+
+/* MEDIA QUERIES  add book */
 
 /* BUTTON */
 
