--- a/style.css
+++ b/style.css
@@ -182,7 +182,8 @@ body {
 .book-card {
 	display: flex;
 	flex-direction: column;
-	justify-content: space-between;
+	justify-content: center;
+	align-items: center;
 	font-size: 20px;
 	gap: var(--spacing-lg);
 	padding: var(--spacing-lg);
@@ -192,5 +193,11 @@ body {
 	line-height: 1.2;
 }
 
-
-
+.book-image {
+	width: 100%;
+	height: 300px;
+	object-fit: cover;
+	border-radius: var(--border-radius);
+	background: url("assets/imgs/coffee-book.jpg");
+	background-size: cover;
+}
