--- a/style.css
+++ b/style.css
@@ -175,7 +175,7 @@ body {
 
 .books-grid {
 	display: grid;
-	grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
+	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
 	margin: 20px;
 }
 
@@ -184,20 +184,17 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	font-size: 20px;
-	gap: var(--spacing-lg);
-	padding: var(--spacing-lg);
-	border-radius: var(--border-radius);
-	background-color: var(--white);
-	box-shadow: var(--shadow);
-	line-height: 1.2;
+	gap: 40px;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
+	background-color: white;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;;
+	/* line-height: 1.2; */
 }
 
-.book-image {
+.book-image img {
 	width: 100%;
-	height: 300px;
-	object-fit: cover;
-	border-radius: var(--border-radius);
-	background: url("assets/imgs/coffee-book.jpg");
-	background-size: cover;
+	height: 100%;
+	border-top-left-radius: 15px;
+	border-top-right-radius: 15px;
 }
