--- a/style.css
+++ b/style.css
@@ -47,30 +47,17 @@ table {
 	border-spacing: 0;
 }
 
-/* UTILS */
 
+/* UTILS START */
 :root {
 	--background-color: #ccfbf1;
 	--light-green-hover: #a7f3d0;
-	--white: #fffbfb;
-	--grey: #f0eef1;
-	--black: #050505;
-	--red: #ff7070;
-	--light-green: #9fff9c;
-	--light-red: #ff9c9c;
-	--border-radius: 8px;
-	--spacing-xs: 5px;
-	--spacing-sm: 10px;
-	--spacing-md: 15px;
-	--spacing-lg: 20px;
-	--spacing-xl: 40px;
-	--container-width: 1200px;
-	--shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
 }
 
 body {
 	background-color: var(--background-color);
 }
+
 
 /* NAVBAR START */
 .navbar {
@@ -167,18 +154,9 @@ body {
 		display: flex;
 	}
 }
-/* NAVBAR END */
 
-.book-card > * {
-	border: 1px solid black;
-}
 
-.book-card > * > * {
-	border: 1px solid black;
-}
-
-/* BOOK LIST */
-
+/* BOOK START */
 .books-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -190,7 +168,6 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
-	gap: 40px;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	background-color: white;
