--- a/style.css
+++ b/style.css
@@ -157,6 +157,7 @@ body {
 
 
 /* BOOK START */
+
 .books-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -173,6 +174,16 @@ body {
 	background-color: white;
 	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;;
 	/* line-height: 1.2; */
+}
+
+.book-card > * {
+	width: 100%;
+	border: 1px solid black;
+	text-align: center;
+}
+
+.book-card > * > * {
+	border: 1px solid rgb(181, 43, 43);
 }
 
 .book-image img {
