--- a/style.css
+++ b/style.css
@@ -178,17 +178,32 @@ body {
 
 .book-card > * {
 	width: 100%;
-	border: 1px solid black;
 	text-align: center;
 }
 
-.book-card > * > * {
-	border: 1px solid rgb(181, 43, 43);
-}
 
 .book-image img {
 	width: 100%;
 	height: 100%;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
+}
+
+.book-info > * {
+	padding: 10px;
+	border-bottom: 1px solid black;
+}
+
+.book-info h1 {
+	font-size: 1.5rem;
+	font-weight: bold;
+	font-family: 'Playfair Display', serif;
+}
+
+.book-info h2 {
+	font-family: 'Open Sans', sans-serif;
+}
+  
+.book-info p {
+	font-family: 'Arial', sans-serif;
 }
