added buttons, now need to style

--- a/style.css
+++ b/style.css
@@ -207,3 +207,16 @@ body {
 .book-info p {
 	font-family: 'Arial', sans-serif;
 }
+
+.book-buttons {
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+	width: 100%;
+	padding: 10px 0;
+	border: 1px solid black;
+}
+
+.book-buttons > * {
+	flex: 1;
+}
