--- a/style.css
+++ b/style.css
@@ -123,7 +123,6 @@ body {
 	background-color: rgb(0, 0, 0);
 }
 
-
 /* MEDIA QUERIES for NAVBAR */
 
 @media (max-width: 500px) {
@@ -160,8 +159,7 @@ body {
 }
 
 
-/* BOOK START */
-
+/* BOOK GRID, BOOK CARD START */
 .books-grid {
 	display: grid;
 	grid-template-columns: repeat(auto-fill, minmax(250px, 1fr));
@@ -176,8 +174,10 @@ body {
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	background-color: white;
-	box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;;
-	/* line-height: 1.2; */
+	box-shadow:
+    0px 0px 10px rgba(0, 0, 0, 0.4),
+    0px 2px 8px rgba(0, 0, 0, 0.8),
+    0px 6px 10px rgba(0, 0, 0, 0.4);
 }
 
 .book-card > * {
@@ -238,3 +238,5 @@ body {
 	background-color: var(--remove-color);
 
 }
+
+/* BOOK FORM START */
