--- a/style.css
+++ b/style.css
@@ -173,7 +173,7 @@ body {
 	align-items: center;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
-	background-color: white;
+	background-color: snow;
 	box-shadow:
     0px 0px 10px rgba(0, 0, 0, 0.4),
     0px 2px 8px rgba(0, 0, 0, 0.8),
@@ -251,3 +251,36 @@ body {
 }
 
 /* BOOK FORM START */
+
+
+.book-card-form > * {
+	width: 100%;
+	text-align: center;
+	border: 1px solid black;
+}
+
+.book-card-form > * > *{
+	width: 100%;
+	text-align: center;
+	border: 1px solid black;
+}
+
+.book-card-form {
+	display: flex;
+	flex-direction: column;
+	justify-content: space-evenly;
+	align-items: center;
+	border: 15px;
+	background-color: snow;
+	box-shadow:
+    0px 0px 10px rgba(0, 0, 0, 0.1),
+    0px 2px 8px rgba(0, 0, 0, 0.2),
+    0px 6px 10px rgba(0, 0, 0, 0.1);
+
+	width: 250px;
+	height: 200px;
+	position: fixed;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+}
