--- a/style.css
+++ b/style.css
@@ -282,6 +282,8 @@ body {
 	padding: 10px 0;
 	width: 90%;
 	font-family: Oswald, sans-serif;
+	border-radius: 20px;
+	border: 0.5px solid black;
 }
 
 .book-form-button:hover {
