--- a/style.css
+++ b/style.css
@@ -262,15 +262,15 @@ body {
 	flex-direction: column;
 	justify-content: space-evenly;
 	align-items: center;
-	border: 15px;
+	border-radius: 10px;
 	background-color: snow;
 	box-shadow:
     0px 0px 10px rgba(0, 0, 0, 0.1),
     0px 2px 8px rgba(0, 0, 0, 0.2),
     0px 6px 10px rgba(0, 0, 0, 0.1);
 
-	width: 250px;
-	height: 250px;
+	width: clamp(200px, 250px, 500px);
+	height: clamp(200px, 250px, 500px);
 	position: fixed;
 	top: 50%;
 	left: 50%;
@@ -309,7 +309,7 @@ body {
 
 
 
-.book-card-wrapper:active {
+.book-card-wrapper.active {
 	display: flex;
 }
 
