--- a/style.css
+++ b/style.css
@@ -172,6 +172,7 @@ body {
 	flex-direction: column;
 	justify-content: center;
 	align-items: center;
+	margin: 15px;
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
 	background-color: snow;
