Revert "MAIN FUNCTIONALITY DONE!"
This reverts commit 04e203f1570a26e6ec6138315f11796dae7cc088.

--- a/style.css
+++ b/style.css
@@ -229,8 +229,7 @@ body {
 	font-family: Oswald, sans-serif;
 }
 
-.book-button-read:hover,
-.book-button-remove:hover {
+.book-buttons > *:hover {
 	cursor: pointer;
 	background-color: var(--light-green-hover);
 }
