--- a/style.css
+++ b/style.css
@@ -330,6 +330,14 @@ body {
 	cursor: pointer;
 }
 
+input:invalid {
+	border: 2px solid red;
+}
+
+input:valid {
+	border: 2px solid green;
+}
+
 /* BLUR START */
 #blur.active {
 	filter: blur(10px);
